kustomize/applications/katib/base/patches/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: katib-ui
spec:
  gateways:
  - ingress-kubeflow/ingress-kubeflow-istio-ingress-gateway-https
